@@ -3660,6 +3660,10 @@ geniCodeCall (operand * left, ast * parms, int lvl)
       return operandFromValue (valueFromLit (0), false);
     }
 
+  // C2X unreachable. Just omit the call for now. TODO: Optimize based on this (remove preceding and subsequent icodes, up zo whole basic block when no side effects)
+  if (!IS_FUNCPTR (ftype) && !strcmp(OP_SYMBOL (left)->name, "__builtin_unreachable"))
+    return 0;
+
   // not allow call a critical function
   if (inCriticalPair && FUNC_ISCRITICAL (ftype))
     werror (E_INVALID_CRITICAL);
